src/test/ui/static-lifetime.stderr
error[E0477]: the type `std::borrow::Cow<'a, A>` does not fulfill the required lifetime
  --> $DIR/static-lifetime.rs:13:20
   |
13 | impl<'a, A: Clone> Arbitrary for ::std::borrow::Cow<'a, A> {}
   |                    ^^^^^^^^^
   |
   = note: type must satisfy the static lifetime

error: aborting due to previous error

